<resources>
    <string name="app_name">FirebaseDemoESP8266</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="nao_tem_cadastro">Não tem cadastro?</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="titulo_tela_login">Login</string>
    <string name="logo_da_empresa">imagem com o logo da empresa</string>
    <string name="titulo_tela_arcondicionado">Ar condicionado</string>
    <string name="label_ligar_desligar">Ligar/desligar:</string>
    <string name="label_velocidade_do_ventilador">Velocidade do Ventilador</string>
    <string name="label_temperatura">Temperatura</string>
    <string name="label_umidade">Umidade</string>

</resources>
