<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ArCondicioandoActivity">


    <TextView
        android:id="@+id/lbLigaDesliga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_ligar_desligar"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/st_ligaDesliga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTemperatura" />

    <Switch
        android:id="@+id/st_ligaDesliga"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/lbLigaDesliga"
        app:layout_constraintStart_toEndOf="@+id/lbLigaDesliga"
        app:layout_constraintTop_toTopOf="@+id/lbLigaDesliga" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_velocidade_do_ventilador"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbLigaDesliga" />

    <SeekBar
        android:id="@+id/sb_velocidadeVentilador"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:max="3"
        android:progress="1"
        android:progressBackgroundTint="@color/colorBackground"
        android:progressTint="@color/colorPrimaryDark"
        android:thumbTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/label_temperatura"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_velocidadeVentilador" />

    <SeekBar
        android:id="@+id/sb_temperatura"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:max="18"
        android:progress="6"
        android:progressBackgroundTint="@color/colorBackground"
        android:progressTint="@color/colorPrimaryDark"
        android:thumbTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/label_umidade"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/sb_temperatura"
        app:layout_constraintTop_toBottomOf="@+id/sb_temperatura" />

    <SeekBar
        android:id="@+id/sb_umidade"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:max="90"
        android:progress="60"
        android:progressBackgroundTint="@color/colorBackground"
        android:progressTint="@color/colorPrimaryDark"
        android:thumbTint="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvTemperatura"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="24 ºC"
        android:textSize="54sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvVelocidade"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTemperatura"
        app:layout_constraintEnd_toStartOf="@+id/tvTemperatura"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTemperatura"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvUmidade"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="60 %"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvTemperatura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/tvTemperatura"
        app:layout_constraintTop_toTopOf="@+id/tvTemperatura"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>